md 初始化